--- a/views/index.jade
+++ b/views/index.jade
@@ -11,10 +11,13 @@ block content
 				button#search-btn(name='goSearch') Search
 
 		div
-			button#btnLoad(name='button') Load Countries
+			button#btn-load(name='button') Load Countries
 
 		div.country-list
-
+			h3#searched-countries Your Country Stats:
 			ul#indiv-list
-			//- 	for country in countries
-			//- 		li strong=country.name
+
+		div.big-country-list
+			h3 Big List of Countries:
+			div.bs-glyphicons
+
